--- a/install_tmux.yml
+++ b/install_tmux.yml
@@ -6,8 +6,10 @@
   - name: update repository index
     yum:
             update_cache: yes
+    when: ansible_distribution == "CentOS"
 
   - name: install tmux package
     yum:
             name: tmux
             state: latest
+    when: ansible_distribution == "CentOS"
