multiple changes have been made

--- a/install_tmux.yml
+++ b/install_tmux.yml
@@ -1,15 +1,38 @@
 ---
-
-- hosts: all
-  tasks:
-
-  - name: update repository index
-    yum:
-            update_cache: yes
-    when: ansible_distribution == "CentOS"
-
-  - name: install tmux package
-    yum:
-            name: tmux
-            state: latest
-    when: ansible_distribution == "CentOS"
+ 
+ - hosts: all
+   tasks:
+ 
+   - name: update repository index for Ubuntu
+     apt:
+       update_cache: yes
+     when: ansible_distribution == "Ubuntu"
+ 
+   - name: install apache2 package for Ubuntu
+     apt:
+       name: apache2
+       state: latest
+     when: ansible_distribution == "Ubuntu"
+ 
+   - name: add php support for apache for Ubuntu
+     apt:
+       name: libapache2-mod-php for CentOS
+       state: latest
+     when: ansible_distribution == "Ubuntu"
+ 
+   - name: update repository index for CentOS
+     dnf:
+             clean packages: yes
+     when: ansible_distribution == "CentOS"
+ 
+   - name: install httpd package for CentOS
+     dnf:
+       name: httpd
+       state: latest
+     when: ansible_distribution == "CentOS"
+ 
+   - name: add php support for apache for CentOS
+     dnf:
+       name: php
+       state: latest
+     when: ansible_distribution == "CentOS"
